# django-sitemaps

./: CHANGELOG.rst  MANIFEST.in  README.rst  django_sitemaps.py  pyproject.toml  setup.cfg  setup.py
