[metadata]
name = django_sitemaps
version = 2.0.1
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/django-sitemaps/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
py_modules = django_sitemaps
install_requires =
    lxml
python_requires = >=3.6
zip_safe = False
